src/assets/css/global.scss
/* ... */
.status-list > div:last-child {
    border-bottom: none;
}
.table-status-icon-cell {
    width: 145px;
}
/* #endregion MODAL QUEUE INFO */

/* #region TOKEN SYMBOL ICON + DESCRIPTION */
.token {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 8px;
    cursor: default;
    width: 90%;
}
.token__icon {
    margin-right: 8px;
    width: var(--icon-token-size);
    height: var(--icon-token-size);
}
.token__name {
    color: var(--color-text-primary);
    font-weight: 600;
    font-size: 14px;
    letter-spacing: 0px;
    text-align: left;
}
.token__ticker {
    cursor: default;
    color: var(--color-text-secondary);
    font-style: normal;
    font-weight: 700;
    font-size: 16px;
    line-height: normal;
    font-family: var(--brand-font);
    letter-spacing: 0px;
}
/* #endregion TOKEN SYMBOL ICON + DESCRIPTION */

.conditional-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
    margin-top: 32px;
    width: 100%;
}
.tx-feedback-container {
    // Container with all the feedback elemensts
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 16px;
    width: 100%;
    .tx-feedback-text {
        // Explanation about the status
        color: var(--color-text-primary);
    }
    .tx-feedback-icon {
        // Container for the feedback icon
    }
}

.TEST {
    // border: var(--debugBorder);
    // border-color: aqua;
    background-color: rgba(226, 43, 198, 0.251) !important;
}

/* #section FOOTER */

.footer-container {
    /* Auto layout */
    margin-top: 24px;
    padding: var(--card-padding);
    border-radius: var(--card-border-radius);
    background: var(--surface-color-1);
    box-shadow: var(--surface-shadow-1);
    width: 100%;
}
/* Footer */
.ant-layout-footer {
    margin: 0%;
    padding: 0%;
    font-size: 14px;
    background-color: transparent;

    .dashboard-footer {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        font-family: var(--main-font);
        font-weight: 400;
        margin-left: 8px;
        color: var(--color-text-secondary);
    }
}

.lightModeContainer {
    display: flex;
    flex-direction: row;
    align-items: center;
    // display: none; //turns the theme mode button off
    .lightModeSwitch {
        background: var(--color-controls-background);
        width: 56px;
        height: 28px;
        padding: 2px;
        border-radius: 50px;
    }

    label {
        width: 24px;
        height: 24px;
        display: flex;
        cursor: pointer;
        border-radius: 50%;
        transition: all 0.25s ease 0s;
        background-image: url('../icons/LightMode-Light.svg');
        background-repeat: no-repeat;
        background-size: cover;
        background-position: 50%;
        filter: var(--color-icon-link-filter);
    }

    input {
        display: none;
    }

    input:checked + label {
        margin-left: 28px;
        background-image: url('../icons/LightMode-Dark.svg');
        background-repeat: no-repeat;
        background-size: cover;
        background-position: 50%;
    }

    .lightModeText {
        font-family: var(--main-font);
        font-weight: 600;
        margin-left: 12px;
        color: var(--color-text-secondary);
    }
}

/* #endsection FOOTER */

